--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "tsc && jest ./dist",
-	"coverage": "tsc && jest ./dist --coverage"
+    "coverage": "tsc && jest ./dist --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jest": "^27.0.3",
     "@types/sinon": "^10.0.6",
     "jest": "^27.4.0",
     "sinon": "^12.0.1",
     "typescript": "^4.5.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.10"
   }
 }
